--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1105,9 +1105,9 @@ body.no-scroll {
     color: #fff;
     font-size: .6rem;
     line-height: 1;
-    padding: .15rem .35rem;
-    border-radius: 999px;
-    min-width: 0.9rem;
+    padding: .10rem .30rem;
+    border-radius: 100%;
+    min-width: 0.85rem;
     text-align: center;
     box-shadow: 0 2px 6px rgba(220,53,69,.35);
     margin-left: 5px;
